# AlgorithmicRobotics

./: .gitignore  README.md
Ex1/: README.md  oskar.py  oskarSolver.py  oskarTester.py
Ex1/util/: CMakeLists.txt  oskarVerifier.cpp  oskar_input.txt  solution.txt
Ex2/: ex23.py  output_scene0.txt  overlay_demo.py  path0.txt  path_out.txt  polygon_scene2.txt  polygon_scene3.txt  polygons_scene.py  scene1.txt  scene2.txt  scene3.txt  tester.py
Ex2/util/: conversions.py  ex23.py  ms_polygon_segment.py  polygon_scene0.txt  read_input.py
Ex2/util/gui/: gui.py
Ex3/: collision_detection.py  conversions.py  documentation.docx  ex32.py  gen_path.py  path0.txt  path_out.txt  read_input.py  sample_polygons.py  scene0_new.txt  scene1.txt  scene1_new.txt  scene2_new.txt  scene3_new.txt  scene4_new.txt  verifier.py  ~$cumentation.docx
Ex3/gui/: RSegment.py  gui.py
Ex4/: ex42.py  linear_path_intersection_test.py  ms_polygon_segment.py  polygons_scene.py  scene0  scene2
Project/: conversions.py  final_project.py  moving_target.py  path0.txt  polygons_scene.py  project.py  read_input.py  scene0  scene1  scene3  scene4  scene5  scene6
Project/gui/: RDisc.py  RPolygon.py  gui.py
